# worlds_and_robots

./: .gitignore  README.md  TASKS_FOR_STUDENTS.md  dockerfile  run.sh
.github/workflows/: build.yml
docs/: robot_v1_urdf_guide.md  world_v1_sdf_guide.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mobile_description/share/ament_index/resource_index/package_run_dependencies/: mobile_description
install/mobile_description/share/mobile_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mobile_description/share/mobile_description/cmake/: mobile_descriptionConfig.cmake
install/mobile_description/share/mobile_description/launch/: robot.launch.py
install/mobile_description/share/mobile_description/urdf/: robot_v1.urdf
install/mobile_world/share/ament_index/resource_index/parent_prefix_path/: mobile_world
install/mobile_world/share/mobile_world/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mobile_world/share/mobile_world/cmake/: mobile_worldConfig.cmake
install/mobile_world/share/mobile_world/launch/: world.launch.py
install/mobile_world/share/mobile_world/worlds/: test_world.sdf
log/: latest_build
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/launch/: arm_description.launch.py
src/arm_description/urdf/: arm_basic.urdf
src/mobile/: CMakeLists.txt
src/mobile/src/: CMakeLists.txt
src/mobile/src/include/mobile/: color_utils.cpp  color_utils.hpp
src/mobile/src/src/: color_follower.cpp
src/mobile/src/test/: test_color.cpp
src/mobile_description/: CMakeLists.txt
src/mobile_description/urdf/: robot_v1.urdf
src/mobile_world/launch/: world.launch.py
src/project_w/src/: CMakeLists.txt  package.xml
src/project_w/src/config/: view_robot.rviz
src/project_w/src/description/: robot.urdf
src/project_w/src/launch/: launch.py
src/project_w/src/src/: color_follower.cpp
src/project_w/src/world/: test_world.sdf
